--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -9,6 +9,7 @@ theme:
         - navigation.tabs
         - navigation.sections
         - toc.integrate
+        - navigation.top
         - search.suggest
         - search.highlight
         - content.tabs.link
@@ -34,20 +35,20 @@ nav:
     - FAQ: faq.md
 
 markdown_extensions:
-    - pymdownx.highlight:
-          anchor_linenums: true
     - pymdownx.inlinehilite
     - pymdownx.snippets
     - admonition
-    - pymdownx.arithmatex:
-          generic: true
     - footnotes
     - pymdownx.details
     - pymdownx.superfences
-    - pymdownx.tabbed:
-          alternate_style: true
     - pymdownx.mark
     - attr_list
+    - pymdownx.highlight:
+          anchor_linenums: true
+    - pymdownx.arithmatex:
+          generic: true
+    - pymdownx.tabbed:
+          alternate_style: true
     - pymdownx.tasklist:
           custom_checkbox: true
     - pymdownx.emoji:
